public/main.css
/* ... */
.national-bar-container-keys--party {
  font-size: 14px;
  color: #666;
  font-weight: 400;
  margin-top: -2px;
}

.national-bar-container-group-sums {
  font-size: 2em;
  font-weight: 500;
  position: absolute;
  top: -63px;
}

#national-bar-container-group-sums--dem {
  color: #579dd5;
}

#national-bar-container-group-sums--rep {
  color: #e03d46;
  right: 0;
}

#national-bar-legend {
  text-align: center;
}

.national-bar-legend-item--grouped {
  display: inline-block;
}

.national-bar-legend-item {
  display: inline;
  margin-right: 16px;
}

#national-bar-legend-item--rep-solid {
  float: right;
  margin-left: 8px;
}

.national-bar-legend-block {
  width: 20px;
  height: 10px;
  display: inline-block;
  margin-right: 5px;
}

@media (max-width: 580px) {
  #national-bar-wrapper {
    margin: 5em 0;
  }
}

@media (max-width: 480px) {
  .national-bar-legend-item {
    display: block;
    width: 100%;
    text-align: left;
  }

  .national-bar-legend-item--grouped {
    display: inline-block;
    width: 32%;
    text-align: center;
    vertical-align: top;
  }

  #national-bar-legend-item--rep-solid {
    float: none;
    margin-left: 0;
  }
}

@media (max-width: 400px) {
  .national-bar--head-icons {
    display: none;
  }

  #national-bar-container {
    width: 100%;
  }

  .national-bar-container-group-sums {
    top: 54px;
  }

  #national-bar-legend {
    margin-top: 80px;
  }
}

#statelist {
  width: 100%;
}

#statelist-table {
  max-width: 478px;
  margin: 0 auto;
  color: #333;
}

#statelist table {
  border-collapse: collapse;
  border-spacing: 0;
}

#statelist tr th {
  border-bottom: 1px solid #999999 !important;
}

#statelist th {
  text-align: left;
  font-weight: 400;
  text-transform: uppercase;
  font-size: 14px;
  vertical-align: bottom;
  padding-bottom: 0.3em;
}

#statelist th.statelist-state {
  padding-left: 35px;
  width: 200px;
}

#statelist td {
  padding: 0.25em 10px;
  position: relative;
  font-size: 1.06rem;
}

#statelist .statelist-pollmargin {
  text-align: right;
  padding-right: 50px;
  width: 120px;
}

#statelist th.statelist-ecvotes {
  text-align: center;
  width: 102px;
  min-width: 102px;
  padding-right: 0;
}

#statelist td.statelist-ecvotes {
  padding-right: 40px;
  text-align: right;
}

#statelist tr {
  border-bottom: 1px solid #cec6b9;
  height: 30px;
}

#statelist tr.statelist-staterow:hover {
  background: #f6e9d8;
}

#statelist tr.statelist-staterow:hover .statelist-stateLabel {
  text-decoration: underline;
}

.statelist-catLabel {
  color: white;
  width: 20px;
  height: 100%;
  position: absolute;
  left: 0;
  top: 0;
}

.statelist-stateLabel {
  margin-left: 25px;
  color: #333;
}

.statelist-dem .statelist-catLabel {
  background: #579dd5;
}

.statelist-leaningDem .statelist-catLabel {
  background: #a2c1e1;
}

.statelist-swing .statelist-catLabel {
  background: #fcc83c;
}

.statelist-rep .statelist-catLabel {
  background: #e03d46;
}

.statelist-leaningRep .statelist-catLabel {
  background: #f4a098;
}


.statelist-nodata {
  color: #666;
}

@media (max-width: 400px) {
  #statelist th.statelist-ecvotes {
    text-align: center;
    min-width: 0px;
  }

  #statelist td.statelist-ecvotes {
    padding-right: 32px;
    text-align: right;
  }

  #statelist .statelist-pollmargin {
    text-align: right;
    padding-left: 0;
    padding-right: 0;
    width: 140px;
    min-width: 80px;
  }

}

#individualpolls table {
  color: #333;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
  font-feature-settings: "tnum";
  border-collapse: collapse;
  border-spacing: 0;
}

#individualpolls tr th {
  border-bottom: 1px solid #999999 !important;
}

#individualpolls th {
  min-width:50px;
  padding-left: 10px;
  padding-right: 10px;

  text-align: left;
  font-weight: 400;
  text-transform: uppercase;
  font-size: 14px;
  vertical-align: bottom;
  padding-bottom: 0.3em;
}

#individualpolls th:first-child {
  padding-left: 0;
}

#individualpolls th:last-child {
  padding-right: 0;
}

#individualpolls td:first-child {
  padding-left: 0;
}

#individualpolls td:last-child {
  padding-right: 0;
}


#individualpolls th.numeric {
  text-align: center;
}

#individualpolls th.samplesize {
  text-align: right;
}

#individualpolls td{
  font-size: 1.06rem;
  text-align: left;
  padding-right: 10px;
  padding-left: 10px;
}

#individualpolls tr {
  border-bottom: 1px solid #cec6b9;
  height: 30px;
}

#individualpolls td.clinton.winner {
  background: #a2c1e1;
}

#individualpolls td.trump.winner {
  background: #f4a098;
}

#individualpolls #individualpolls td.winner.narrowonly {
  font-weight: 400;
}

#individualpolls td.narrowonly {
  height: 32px;
}

#individualpolls td.winner.narrowonly .winner {
  font-weight: 600;
}

#individualpolls td.numeric{
  text-align: center;
  border-left: 1px solid #cec6b9;
}

#individualpolls td.samplesize {
  text-align: right;
}

#individualpolls td.samplesize .sampleType {
  color: #777;
}

#individualpolls td.date{
  min-width: 70px;
  color: #777777;
}

#individualpolls p.notavailable {
  color: #666;
  font-size: 1em;
}

@media (min-width: 600px) {
  #individualpolls .narrowonly {
    display: none;
  }
}

@media (max-width: 600px) {

  #individualpolls td.numeric {
    text-align: center;
    white-space: nowrap;
  }

  #individualpolls .secondary {
    display: none;
  }

  #individualpolls th {
    padding: 0;
  }

  #individualpolls td {
    padding-left: 5px;
    padding-right: 5px;
  }
}

#demographic-wrapper {
  width: 100%;
  margin-top: -1em;
}

.demographic-container {
  width: 48%;
  display: inline-block;
  vertical-align: top;
  text-align: center;
  margin-top: 2em;
}

.demographic-container:nth-child(even) {
  float: right;
}

.demographic-container h3 {
  font-family: MetricWeb, sans-serif;
  font-size: 15px;
  font-weight: 400;
  padding: auto 5px;
  text-align: left;
  text-transform: uppercase;
  color: #333;
  margin-bottom: 0.5em;
}
/* ... */

